Changelog for django-filer
=============================

next
----

* seperate, customizable file storage backends for public and private files


0.8.2
-----

* sha hash for files
* packaging fixes

0.8.1
-----

* moved to easy-thumbnails for thumbnailing. added tests and lots of cleanup.
* Backwards incompatible changes:
 * use easy-thumbnails instead of sorl.thumbnail

0.7.0
-----

bugfixes

0.5.4a1
-------

adds description field

0.0.2a (2009-11-04)
-------------------

- First test release as a pypi package.