@@ -3,6 +3,7 @@ verbosity=5
 versions = versions
 parts =
 	django
+	django_git
 	easy_thumbnails_git
 develop = 
 	.
@@ -14,7 +15,8 @@ eggs =
 extra-paths = ${buildout:directory}
 
 [versions]
-django = 1.2.4
+django = 
+easy_thumbnails =
 
 [django]
 recipe = djangoprojectrecipe
@@ -23,8 +25,14 @@ settings = filer.testsettings
 eggs = ${buildout:eggs}
 extra-paths = ${buildout:extra-paths}
 
+[django_git]
+recipe = zerokspot.recipe.git
+repository = git://github.com/django/django.git
+as_egg = true
+rev = f5a1d03b6868091d28f12543efb27824e7ab750c
+
 [easy_thumbnails_git]
 recipe = zerokspot.recipe.git
-repository = https://github.com/SmileyChris/easy-thumbnails.git
+repository = git://github.com/SmileyChris/easy-thumbnails.git
 as_egg = true
 rev = f7e7eb00946d8de560dc8c8caabdef80a41bffb6
