@@ -1,10 +1,15 @@
 Changelog for django-filer
-=============================
+==========================
 
 next
 ----
 
 * seperate, customizable file storage backends for public and private files
+* backwards incompatible changes
+  * storage refactor: path to files in the db has changed (no longer relative to MEDIA_ROOT)
+  * `filer.server.urls` needs to be included to serve private files
+  * static media has been moved from 'media' to 'static' 
+    (as proposed by django-staticmedia and django 1.3)
 
 
 0.8.2
@@ -18,7 +23,7 @@ next
 
 * moved to easy-thumbnails for thumbnailing. added tests and lots of cleanup.
 * Backwards incompatible changes:
- * use easy-thumbnails instead of sorl.thumbnail
+  * use easy-thumbnails instead of sorl.thumbnail
 
 0.7.0
 -----
